Oct 25, 2013 - chris ---------------------------------------------------
o Added HAM_PARAM_RECORD_SIZE to specify a fixed record size; if it's small
	enough, the records are stored in the leaf and not in a separately
	allocated blob

Oct 22, 2013 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.3

Oct 18, 2013 - chris ---------------------------------------------------
o Introduced a new Btree node layout for fixed length keys types which
	is better optimized for CPU caches and more compact then the
	legacy format

Oct 14, 2013 - chris ---------------------------------------------------
o Fixed invalid memory access when using mmap on pagesizes which are not
	a power of two

Oct 11, 2013 - chris ---------------------------------------------------
o Fixed a btree corruption during SMOs (internal shifts after underflow)

Oct 5, 2013 - chris ---------------------------------------------------
o Integrating "ham_bench" tool for benchmarking and testing

Sep 23, 2013 - chris ---------------------------------------------------
o Introducing "types" for the btree; the default type is HAM_TYPE_BINARY,
	additional types are HAM_TYPE_CUSTOM, HAM_TYPE_UINT32 etc. The types
	influence the internal btree layout.
o ham_db_set_compare_func is only allowed if the key type is HAM_TYPE_CUSTOM;
	otherwise, an error is returned

Sep 13, 2013 - chris ---------------------------------------------------
o The btree now has relaxed rules regarding merging/shifting after delete;
	if a node is less than 20% full it will trigger an SMO (previously:
	50%), and shifts only happen if both pages have a sufficiently
	different size
o For consistency reasons, some macros were renamed:
	HAM_PARAM_CACHESIZE -> HAM_PARAM_CACHE_SIZE
	HAM_PARAM_PAGESIZE -> HAM_PARAM_PAGE_SIZE
	HAM_PARAM_KEYSIZE -> HAM_PARAM_KEY_SIZE

Sep 01, 2013 - chris ---------------------------------------------------