@@ -1,3 +1,6 @@
+Oct 31, 2013 - chris ---------------------------------------------------
+o ham_bench now can generate keys from /usr/share/dict/words
+
 Oct 25, 2013 - chris ---------------------------------------------------
 o Added HAM_PARAM_RECORD_SIZE to specify a fixed record size; if it's small
 	enough, the records are stored in the leaf and not in a separately
